Send DisplayChanged on display removal

My recent change on client_root actually had a side effect;
the window may change its display when the display is gone
(e.g. disconnected). Window server should send DisplayChanged
event even in such case.

BUG=890071
TEST=the new test case covers

Change-Id: I8566e6439bc8e87a0e3252aded8c9aa08cb1c7a9
Reviewed-on: https://chromium-review.googlesource.com/c/1302734
Commit-Queue: Jun Mukai <mukai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603252}
Former-commit-id: b26f9161c145f083f6a65183462d8f4b0a10118d